# multem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  compileMULTEM.m  compile_mex_files.m  compile_mex_multem.m  compile_multem.m  hAtomTypesGPU.cu  hAtomTypesGPU.h  hAtomicData.cpp  hAtomicData.h  hConstTypes.h  hGridCPU.cpp  hIncidentWaveGPU.cu  hIncidentWaveGPU.h  hMatlab2Cpp.cpp  hMatlab2Cpp.h  hMicroscopeEffectsGPU.cu  hMicroscopeEffectsGPU.h  hMulSliGPU.cu  hMulSliGPU.h  hNumerovMethod.cpp  hNumerovMethod.h  hPotentialCPU.cpp  hPotentialCPU.h  hPotentialConv.cu  hPotentialConv.h  hPotentialGPU.cu  hPotentialGPU.h  hQuadrature.cpp  hQuadrature.h  hRandGen.h  hSAGaussianExpFit.h  hSAGaussianFit.h  hSAHF.h  hSTEMGPU.cu  hSTEMGPU.h  hSpecimenCPU.cpp  (+16 more)
multem/: CMakeLists.txt
multem-matlab/: CMakeLists.txt  compile_mex_multem.m
multem-matlab/cmake/: FindMULTEM.cmake
multem-matlab/crystalline_materials/: Cu001_xtl.m  Cu110_xtl.m  Diamond110_xtl.m  Ir001_xtl.m  LaAlO3001_xtl.m  Ni110_xtl.m  Pb001_xtl.m  PdH001_xtl.m  Primitive_xtl.m  Si110_xtl.m  YH2001_xtl.m  fcc110_xtl.m
multem-matlab/matlab_functions/: ilm_center_spec.m  ilm_chk_bound.m  ilm_dflt_input_multem.m  ilm_find_closest_xy_pos.m  ilm_ifelse.m  ilm_mrad_2_rAng.m  ilm_rAng_2_mrad.m  ilm_read_ap_xyz.m  ilm_read_lat_parm_cif.m  ilm_show_slicing.m  mex_CUDA_win64.xml  read_psi_0_multem.m  tfm_check_stem_setup.m
multem-matlab/matlab_functions/+multem_input/: detector.m  parameters.m
multem-matlab/mex_examples_multem/: example_MULTEM_CBED.m  example_MULTEM_CBEI.m  example_MULTEM_ED.m  example_MULTEM_EELS.m  example_MULTEM_EFTEM.m  example_MULTEM_EWFS.m  example_MULTEM_EWRS.m  example_MULTEM_EWRS_till_illumination.m  example_MULTEM_HCTEM.m  example_MULTEM_HRTEM.m  example_MULTEM_ISTEM.m  example_MULTEM_PED.m  example_MULTEM_STEM.m  example_MULTEM_STEM_EELS.m  example_MULTEM_STEM_matrix_detector.m  example_add_amorphous_layer.m  example_amorphous_specimen.m  example_beam_self_interaction.m  example_check_STEM_input.m  example_feg.m  example_fxg.m  example_incident_wave_1.m  example_incident_wave_2.m  example_incident_wave_4.m  example_microscope_aberrations.m  example_pr.m  example_projected_potential.m  example_propagate.m  example_specimen_creation_from_cif_file.m  example_specimen_planes.m  example_specimen_slicing_rotation.m  example_specimen_slicing_show.m  example_specimen_slicing_with_amorphous_layer.m  example_specimen_slicing_zone_axis.m  example_transmission_function.m  example_vp.m  example_vr.m  example_vz.m  example_wave_function.m
multem-matlab/mex_files_multem/: ilc_add_amorp_lay.cpp  ilc_amorp_spec.cpp  ilc_crystal_by_lays.cpp  ilc_feg.cpp  ilc_fwhm_2_sigma.cpp  ilc_fxeg_data.cpp  ilc_fxg.cpp  ilc_gamma.cpp  ilc_gmax.cpp  ilc_hwhm_2_sigma.cpp  ilc_iehwgd_2_sigma.cpp  ilc_incident_wave.cpp  ilc_lambda.cpp  ilc_microscope_aberrations.cpp  ilc_microscope_aberrations.cu  ilc_min_spl.cpp  ilc_mrad_2_rAng.cpp  ilc_mrad_2_sigma.cpp  ilc_multem.cpp  ilc_pr.cpp  ilc_projected_potential.cpp  ilc_propagate.cpp  ilc_propagate.cu  ilc_rdf_3d.cpp  ilc_scherzer_aperture.cpp  ilc_scherzer_defocus.cpp  ilc_sigma.cpp  ilc_spec_planes.cpp  ilc_spec_rot.cpp  ilc_spec_slicing.cpp  ilc_transmission_function.cpp  ilc_vp.cpp  ilc_vr.cpp  ilc_vz.cpp  ilc_wave_function.cpp  ilc_wave_function.cu  matlab_mex.cuh  matlab_types.cuh  mex_amorp_spec.m  mex_feg.m  (+16 more)
multem-python/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt  setup.cfg  setup.py
multem-python/cmake/: FindMULTEM.cmake
multem-python/examples/: example_MULTEM_CBED.py  example_MULTEM_CBEI.py  example_MULTEM_EWRS.py  example_MULTEM_HCTEM.py  example_MULTEM_HRTEM.py  example_MULTEM_ISTEM.py  example_MULTEM_STEM.py  example_MULTEM_STEM_matrix_detector.py  example_add_amorphous_layer.py  example_amorphous_specimen.py  example_crystal_by_layers.py  example_feg.py  example_incident_wave_1.py  example_incident_wave_2.py  example_incident_wave_3.py  example_incident_wave_4.py  example_microscope_aberrations.py  example_pr.py  example_projected_potential.py  example_specimen_planes.py  example_specimen_rotation.py  example_specimen_slicing_rotation.py  example_specimen_slicing_show.py  example_specimen_slicing_zone_axis.py  example_specimen_subslicing.py  example_transmission_function.py  example_vp.py  example_vr.py  example_vz.py  example_wave_function.py
multem-python/src/multem/: __init__.py  amorp_lay_info.h  atom_data.h  detector.h  eels.h  enums.h  fp_dim.h  grid_2d.h  input_multislice.h  lens.h  multem_ext.cpp  multislice.h  output_multislice.h  r3d.h  range_2d.h  scanning.h  serialization.h  system_configuration.h
multem-python/test/: test_atom_data.py  test_cpp.py  test_crystal_parameters.py  test_crystalline_materials.py  test_detector.py  test_eels.py  test_examples.py  test_grid_2d.py  test_hrtem.py  test_input_multislice.py  test_lens.py  test_output.py  test_output_multislice.py  test_range_2d.py  test_scanning.py  test_system_configuration.py
multem-python/test/data/: __init__.py
multem-python/test/examples/: example_MULTEM_CBED.py  example_feg.py  (+41 more)
multem/cmake/: FindFFTW.cmake
multem/include/: amorp_spec_api.h  atom_cal_api.h  atom_data_api.h  atomic_data_api.h  box_occ_api.h  cgpu_rand_api.h  fxeg_data_api.h  input_multislice_api.h  multem.h  output_multislice_api.h  safe_types.cuh  stream_api.h  xtl_build.hpp
multem/src/: amorp_spec.hpp  atomic_cross_section.cuh  atomic_data.hpp  atomic_data_mt.hpp  atomic_fcns_mt.hpp  blas.cuh  box_occ.hpp  cgpu_classes.cuh  cgpu_fcns.cuh  cgpu_rand.cuh  cpu_fcns.hpp  energy_loss.cuh  fft.cuh  fftw3.h  fxeg_data.hpp  gpu_fcns.cuh  image_functions.cuh  incident_wave.cuh  input_multislice.cuh  input_tomography.cuh  lapack.hpp  lin_alg_def.cuh  math.cuh  matlab_types.cuh  microscope_effects.cuh  multem.cpp  multem.cu  output_multislice.hpp  peak_finding.cuh  projected_potential.cuh  propagator.cuh  slicing.hpp  spec.hpp  stream.cuh  tem_simulation.cuh  tomography.cuh  traits.cuh  transmission_function.cuh  types.cuh  wave_function.cuh  (+1 more)
multem/test/: tests.cpp
(+1863 files in other folders)
